--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "export": "next export"
   },
   "dependencies": {
-    "contentful": "^7.14.6",
-    "next": "11.1.3",
+    "contentful": "^9.1.18",
+    "next": "^12.1.4",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
